<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_overview_page"
        android:icon="@drawable/baseline_view_list_24"
        android:title="@string/overview_page" />

    <item
        android:id="@+id/fragment_categories_page"
        android:icon="@drawable/baseline_category_24"
        android:title="@string/categories_page" />

    <item
        android:id="@+id/fragment_areas_page"
        android:icon="@drawable/baseline_location_on_24"
        android:title="@string/areas_page" />

    <item
        android:id="@+id/fragment_advanced_search_page"
        android:icon="@drawable/baseline_manage_search_24"
        android:title="@string/advanced_search_page" />

    <item
        android:id="@+id/fragment_favorites_page"
        android:icon="@drawable/baseline_workspace_premium_24"
        android:title="@string/favorites_page" />

</menu>